@@ -1,3 +1,8 @@
+2008-11-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/threadCmd.c (ThreadCutChannel): fix const warning
+	(ThreadSend): safely set interp result object [Bug #1988779]
+
 2009-10-22 Zoran Vasiljevic <zv@archiware.com>
 
 	* generic/threadPool.c: fixed race condition when
